<resources>
    <string name="app_name">BloodSearch</string>
    <string name="logo">logo</string>
    <string name="add_donor">Add Donor</string>
    <string name="active_request">Active Request</string>
    <string name="add_request">Add Request</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="share">Share</string>
    <string name="todo">TODO</string>
    <string name="donors">Donors</string>
    <string name="user_profile">user_profile</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="setting">setting</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="ashish">Ashish</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="be_a_life_saver">Be A Life Saver!!!</string>
    <string name="register">Register</string>
    <string-array name="numbers">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="states_spinner">
        <item>Andhra Pradesh</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item></item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
