<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/amita"
        android:text="Be A Life Saver!!!"
        android:textColor="#D02720"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/linearlayoutupper"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/name_id"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="10dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearlayoutupper">
        <EditText
            android:id="@+id/mobile_id"
            android:layout_width="310dp"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/city_id"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/mobile_id"
            android:layout_marginTop="53dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/state_id"
            android:layout_width="143dp"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/mobile_id"
            android:layout_alignTop="@+id/city_id"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/age_id"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/mobile_id"
            android:layout_marginBottom="32dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:paddingStart="10dp" />
        <ProgressBar
            android:id="@+id/progressbar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="145dp"
            android:layout_height="42dp"
            android:layout_alignEnd="@+id/mobile_id"
            android:layout_alignTop="@+id/age_id"
            android:autofillHints="Group"
            android:background="@drawable/border"
            tools:targetApi="o" />

    </RelativeLayout>
    <Button
        android:id="@+id/add_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:background="@drawable/round_corner_button"
        style="@style/button_style"
        android:layout_centerHorizontal="true"
        android:text="Add Donor"
        android:textColor="#ffffff" />

</RelativeLayout>