<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:id="@+id/layoutupper">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_id"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/user_profile"
            android:scaleType="centerCrop"
            android:src="@drawable/drawerimageicon" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutmiddle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutupper"
        android:padding="20dp"
        android:layout_marginTop="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>


            <EditText
                android:id="@+id/profile_name_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:cursorVisible="false"
                android:background="@drawable/profile_border"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mobile Number"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>

            <EditText
                android:id="@+id/profile_mobile_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/profile_border"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingStart="10dp"
                />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>


            <EditText
                android:id="@+id/profile_city_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/profile_border"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:paddingStart="10dp"
                />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>

            <EditText
                android:id="@+id/profile_state_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/profile_border"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/state"
                android:inputType="text"
                android:paddingStart="10dp"
                />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>

            <EditText
                android:id="@+id/profile_age_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/profile_border"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="10dp"
                />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blood Group"
            android:paddingLeft="8dp"
            android:textSize="12dp"/>

        <Spinner
            android:id="@+id/profile_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/profile_border"
            android:autofillHints="Group"
            tools:targetApi="o" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/layoutmiddle">

        <Button
            android:id="@+id/profile_save_id"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_corner_button"
            android:text="Save"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>